--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/jflores-portfolio/src/main.tsx"></script>
+    <script type="module" src="/@vite/client"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
