--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/@vite/client"></script>
-    <script type="module" src="/src/main.tsx"></script>
+    <script
+      type="module"
+      src="https://jflores0815.github.io/jflores-portfolio/src/main.tsx"
+    ></script>
   </body>
 </html>
